--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "engines": {
     "node": "~10.15.3"
   },
-  "devDependencies": {
+  "dependencies": {
     "@angular/cli": "^8.3.20",
     "@angular/compiler-cli": "^8.2.14"
+    "request": "^2.88.0"
   }
 }
