--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@angular/cli": "^8.3.20",
-    "@angular/compiler-cli": "^8.2.14"
+    "@angular/compiler-cli": "^8.2.14",
     "request": "^2.88.0"
   }
 }
