--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "postinstall": "cd frontend && npm install",
+    "postinstall": "ng build --aot -prod",
     "test": "cd frontend && npm test && cd ..",
     "tslint_typechecks": "cd frontend && npm run tslint_typechecks && cd ..",
     "serve": "cd frontend && npm run serve",
@@ -12,7 +13,8 @@
   },
   "private": true,
   "engines": {
-    "node": "~10.15.3"
+    "node": "~10.15.3",
+    "npm": "6.1.x"
   },
   "dependencies": {
     "@angular/cli": "^8.3.20",
