--- a/package.json
+++ b/package.json
@@ -3,22 +3,13 @@
   "version": "0.1.0",
   "scripts": {
     "postinstall": "cd frontend && npm install",
-    "heroku-postbuild": "ng build --aot -prod",
     "test": "cd frontend && npm test && cd ..",
     "tslint_typechecks": "cd frontend && npm run tslint_typechecks && cd ..",
     "serve": "cd frontend && npm run serve",
-    "serve-public": "cd frontend && ./node_modules/.bin/ng serve --host 0.0.0.0",
-    "preinstall": "npm install -g node-gyp",
-    "heroku-postinstall": "ng build --aot -prod"
+    "serve-public": "cd frontend && ./node_modules/.bin/ng serve --host 0.0.0.0"
   },
   "private": true,
   "engines": {
-    "node": "~10.15.3",
-    "npm": "6.1.x"
-  },
-  "dependencies": {
-    "@angular/cli": "^8.3.20",
-    "@angular/compiler-cli": "^8.2.14",
-    "request": "^2.88.0"
+    "node": "~10.15.3"
   }
 }
