--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+  },
+  "dependencies": {
     "@angular/language-service": "8.2.9",
     "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.6",
@@ -27,9 +29,7 @@
     "postcss-loader": "^3.0.0",
     "sorted-object": "^2.0.1",
     "ts-node": "~8.3.0",
-    "tslint": "5.18.0"
-  },
-  "dependencies": {
+    "tslint": "5.18.0",
     "@angular-devkit/build-angular": "~0.803.8",
     "@angular/animations": "8.2.9",
     "@angular/cdk": "^8.2.2",
